<resources>
    <string name="app_name">P4</string>

    <!-- drawer -->
    <string name="drawer_user_name">Hello %1$s</string>
    <string name="drawer_logout">Logout</string>

    <!-- splash -->
    <string name="splash_loading">Loading... please wait</string>

    <!-- signin (login/signup) -->
    <string name="signin_login_header">Login</string>
    <string name="signin_login_email_hint">Email</string>
    <string name="signin_login_email_error">Email is incorrect or empty</string>
    <string name="signin_login_password_hint">Password</string>
    <string name="signin_login_password_error">Password cannot be empty</string>
    <string name="signin_login_submit">Submit</string>

    <!-- home -->
    <string name="home_lifepotential_title">Family life potential:</string>
    <string name="home_procedures_title">Procedures to book:</string>

    <!-- procedures -->
    <string name="procedure_probability_label">Probability</string>
    <string name="procedure_probability_value">%1$d of %2$d</string>
    <string name="procedure_life_potential_label">Life potential</string>
    <string name="procedure_life_potential_value">+%1$d\%%</string>
    <string name="procedure_progressbar_life_potential_description">Gain %1$d\%% to your life potential</string>
    <string name="procedure_risk_factors_title">Your risk factors:</string>
    <string name="procedure_last_visit_title">Last visit:</string>
    <string name="procedure_last_visit_details"><![CDATA[%1$s\u0020\u0020|\u0020\u0020%2$s]]></string>
    <string name="procedure_plan_your_visit_title">Plan your visit</string>
    <string name="procedure_plan_your_visit_covered">Covered by health plan</string>
</resources>
